wip: create addToBag API in-progress
